--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,36 @@
 </head>
 <body>
   <app-root></app-root>
+  <h1>Inicia sesión</h1>
+
+        <button id="login">Inicia con Google</button>
+
+        <div id="root">
+
+        </div>
+
+
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script type="module">
+          // Import the functions you need from the SDKs you need
+          import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+          // TODO: Add SDKs for Firebase products that you want to use
+          // https://firebase.google.com/docs/web/setup#available-libraries
+        
+          // Your web app's Firebase configuration
+          const firebaseConfig = {
+            apiKey: "AIzaSyC5whO8pgiV_SxkWOPCNbjrUWSFzZgzHJk",
+            authDomain: "framafer1-6423f.firebaseapp.com",
+            projectId: "framafer1-6423f",
+            storageBucket: "framafer1-6423f.appspot.com",
+            messagingSenderId: "864276870526",
+            appId: "1:864276870526:web:36d7adfa78ac5200caef2f"
+          };
+        
+          // Initialize Firebase
+          const app = initializeApp(firebaseConfig);
+        </script>
+
+        <script src="app.js"></script>
 </body>
 </html>
